# LiteBEM

./: .buildinfo  .gitignore  MANIFEST.in  README.md  __about__.py  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: gh_pages.yml
_sources/development/: api.md.txt  contributing.md.txt
_sources/introduction/: acknowledgements.md.txt  gettingstarted.md.txt  overview.md.txt
_sources/theory/: greenstheorem.md.txt
_sources/users/: examples.md.txt  postprocessing.md.txt
development/: api.html  contributing.html  testing.html
docs/: source - Shortcut.lnk
docs/notes/: notes.org
docs/preprocessor/: compute_panel_properties.md
docs/source/: conf.py  index.rst  install.md
docs/source/development/: testing.md
introduction/: acknowledgements.html  gettingstarted.html  history.html  overview.html
litebem/green_functions/: delhommeau.py
litebem/postprocessing/: results.py
litebem/preprocessing/: bem_problem_definitions.py  body.py  mesh.py
litebem/preprocessor/: airy_waves.py  bem_problem_definitions.py  mesh.py
litebem/solver/: bem_solver.py  linear_solvers.py
tests/Outlines/: body_outline.py  multiBodyOutline.py  multiBodyOutline2.py  results.py  resultsMulti.py
tests/unit/: preprocessor_unit_test.py  preprocessor_unit_tests.py  solver_unit_test.py  solver_unit_tests.py  unit_test.py  unit_tests.py
theory/: code_outlines_temp.html  greenstheorem.html  hydrostatics.html  irfs.html  linearsolver.html  meshes.html  potentialflow.html
users/: examples.html  postprocessing.html  workflow.html
(+45 files in other folders)
