[metadata]
name = litebem
version = 1.0.2
author = mancellin, dav-og, dunc-lamb
description = A lightweight, Apache 2.0 distribution of Matthieu Ancellin`s Capytaine BEM code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dav-og/liteBEM
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.0

[options.packages.find]
where = src